--- a/client-config.yml
+++ b/client-config.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/user_db
-    username: ${username}
-    password: ${password}
+    username: root
+    password: root
   jpa:
     show-sql: true
     hibernate:
