--- a/client-config.yml
+++ b/client-config.yml
@@ -16,6 +16,7 @@ spring:
     redis:
       cache-null-values: true
       time-to-live: 600000
+    cache-names: vial
   redis:
     host: localhost
     port: 6379
