Updated cloud config for docker

--- a/client-config.yml
+++ b/client-config.yml
@@ -26,8 +26,8 @@ healthcare:
      uri: http://host.docker.internal:8090/vitalSign
      name: Healthcare-Management-VitalSign-API 
    user:
-     uri: http://localhost:8080/users
+     uri: http://host.docker.internal:8080/users
      name: Healthcare-Management-User-API 
    patient:
-    uri: http://localhost:8089/patient
+    uri: http://host.docker.internal:8089/patient
     name: Healthcare-Management-Patient-API
