--- a/client-config.yml
+++ b/client-config.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/user_db
+    url: jdbc:mysql://host.docker.internal:3306/user_db
     username: ${username}
     password: ${password}
   jpa:
