--- a/client-config.yml
+++ b/client-config.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://host.docker.internal:3306/user_db
+    url: jdbc:mysql://localhost:3306/user_db
     username: ${username}
     password: ${password}
   jpa:
@@ -17,17 +17,17 @@ spring:
       cache-null-values: true
       time-to-live: 600000
   redis:
-    host: host.docker.internal
+    host: localhost
     port: 6379
     
 healthcare:
   management:
    vitalsign:
-     uri: http://host.docker.internal:8090/vitalSign
+     uri: http://localhost:8090/vitalSign
      name: Healthcare-Management-VitalSign-API 
    user:
-     uri: http://host.docker.internal:8080/users
+     uri: http://localhost:8080/users
      name: Healthcare-Management-User-API 
    patient:
-    uri: http://host.docker.internal:8089/patient
+    uri: http://localhost:8089/patient
     name: Healthcare-Management-Patient-API
