changes in client-config.yml

--- a/client-config.yml
+++ b/client-config.yml
@@ -19,3 +19,9 @@ spring:
   redis:
     host: localhost
     port: 6379
+    
+healthcare:
+  management: 
+   patient:
+    uri: http://localhost:8089/patient
+    name: Healthcare-Management-Patient-API
