--- a/Healthcare-Management-Patient-API.yml
+++ b/Healthcare-Management-Patient-API.yml
@@ -3,3 +3,9 @@ healthcare:
    patient:
      uri: http://localhost:8089/patient
      name: Healthcare-Management-Patient-API
+   vitalsign:
+     uri: http://localhost:8090/vitalSign
+     name: Healthcare-Management-VitalSign-API
+   user:
+     uri: http://localhost:8080/users
+     name: Healthcare-Management-User-API
