--- a/Healthcare-Management-VitalSign-API.yml
+++ b/Healthcare-Management-VitalSign-API.yml
@@ -3,3 +3,6 @@ healthcare:
    vitalsign:
      uri: http://localhost:8090/vitalSign
      name: Healthcare-Management-VitalSign-API
+   patient:
+    uri: http://localhost:8089/patient
+    name: Healthcare-Management-Patient-API
