changes in patient yml files

--- a/Healthcare-Management-Patient-API.yml
+++ b/Healthcare-Management-Patient-API.yml
@@ -1,8 +1,7 @@
 healthcare:
   management:
-   vitalsign:
-     uri: http://localhost:8090/vitalSign
-     name: Healthcare-Management-VitalSign-API
    patient:
     uri: http://localhost:8089/patient
     name: Healthcare-Management-Patient-API
+    vitaluri: http://localhost:8090/vitalSign
+    vitalname: Healthcare-Management-VitalSign-API
