--- a/Healthcare-Management-Patient-API.yml
+++ b/Healthcare-Management-Patient-API.yml
@@ -1,5 +1,8 @@
 healthcare:
   management:
+   vitalsign:
+     uri: http://localhost:8090/vitalSign
+     name: Healthcare-Management-VitalSign-API
    patient:
-    vitaluri: http://localhost:8090/vitalSign
-    vitalname: Healthcare-Management-VitalSign-API
+    uri: http://localhost:8089/patient
+    name: Healthcare-Management-Patient-API
