revert changes in config-client.yml

--- a/client-config.yml
+++ b/client-config.yml
@@ -19,3 +19,15 @@ spring:
   redis:
     host: localhost
     port: 6379
+    
+healthcare:
+  management:
+   vitalsign:
+     uri: http://localhost:8090/vitalSign
+     name: Healthcare-Management-VitalSign-API 
+   user:
+     uri: http://localhost:8080/users
+     name: Healthcare-Management-User-API 
+   patient:
+    uri: http://localhost:8089/patient
+    name: Healthcare-Management-Patient-API
