--- a/client-config-dev.yml
+++ b/client-config-dev.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dev_db
+    url: jdbc:mysql://localhost:3306/user_db
     username: ${username}
     password: ${password}
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
        dialect: org.hibernate.dialect.MySQL5Dialect
